<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".deprecated.Fragment1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment" />

    <Button
        android:id="@+id/goToFragment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go to next" />

    <Button
        android:id="@+id/todoSomething"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="To do something"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/addUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_user"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/allUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_all_users"/>

        <Button
            android:id="@+id/generateUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_users"/>

        <Button
            android:id="@+id/findUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_user"/>

    </LinearLayout>

</LinearLayout>